--- a/6.22project/css/index.css
+++ b/6.22project/css/index.css
@@ -1,4 +1,15 @@
 body{
     background: rgba(0,255,0,0.2)
 }
-
+.user{
+    width: 120px;
+    height: 30px;
+    float:left;
+    margin: 10px;
+}
+.user a {
+    color: #ff4400;
+    line-height: 30px;
+    text-decoration: none;
+    padding:0 10px;
+}
