--- a/6.22project/css/style.css
+++ b/6.22project/css/style.css
@@ -2,18 +2,22 @@
     padding:0;
     margin:0;
 }
+i,em{
+    font-style: normal;
+}
 header{
     width: 1198px;
     height: 200px;
     margin:0 auto;
     text-align: center;
+    background: #ffffff;
     border:1px solid #ff4411;
 }
 .container{
     width: 324px;
     height: 34px;
     float:right;
-    padding:83px 0;
+    padding:65px 0;
 }
 .search{
     width: 200px;
@@ -36,7 +40,7 @@ header{
 section{
     width: 1200px;
     /*height: 500px;*/
-    margin:0 auto;
+    margin:20px auto;
 }
 nav{
     width: 100%;
@@ -71,7 +75,7 @@ footer{
 }
 .sans{
     width: 100%;
-    height:50px;
+    height:60px;
     overflow: hidden;
     text-align: center;
     position: relative;
@@ -85,6 +89,7 @@ footer{
     /*overflow: hidden;*/
     text-overflow: ellipsis;
     position: absolute;
+    transition: 1s;
     top: 0;
     left: 600px;
 }
