--- a/shop/css/search.css
+++ b/shop/css/search.css
@@ -1,37 +1,14 @@
-.carousel{
-    width:100%;
-    height: 340px;
-    background:coral;
-}
-.standard{
-    width: 1200px;
-    height: 200px;
-    margin:0 auto;
-}
-.standard a{
-    display: block;
-    width:100%;
-    height: 80px;
-    background:url("../image/header/standard.png");
-    background-size: 100%;
-}
-.standard-img h1{
-    text-align: center;
-    line-height: 100px;
-    font-size: 30px;
-    color:#ff4411;
-}
+
 .goods ul{
     height: 860px;
 }
 .goods ul li {
     width: 200px;
-    height: 398px;
+    height: 400px;
     float:left;
     position: relative;
     background: #ffffff;
     border: 2px solid transparent;
-    border-top:2px solid #ff4411;
     margin: 15px 18px;
     transition: 1s;
     overflow: hidden;
@@ -63,8 +40,8 @@
     display: block;
     width: 100px;
     padding: 10px;
-    color: #ffffff;
-    background:#ff4411;
+    color: #ff4411;
+    /*background:#ff4411;*/
     font-size: 20px;
     font-weight: bold;
 }
@@ -80,4 +57,14 @@
     width:100%;
     height:100%;
     z-index: 2;
+}
+.But{
+    width: 1200px;
+    height: 30px;
+    position: absolute;
+    bottom: 0;
+    z-index: 2;
+}
+.But button{
+    float:left;
 }
