--- a/shop/css/unify.css
+++ b/shop/css/unify.css
@@ -1,5 +1,5 @@
 body{
-    height: 5000px;
+    /*height: 5000px;*/
 }
 header{
     width: 100%;
@@ -10,7 +10,7 @@ nav{
     width: 100%;
     height: 40px;
     background:#f8f8f8;
-    border:1px solid #ebebeb;
+    border-bottom:1px solid #ebebeb;
 }
 .header-nav{
     width: 1200px;
@@ -75,6 +75,19 @@ nav{
     height: 25px;
     margin: 12px auto;
 }
+.standard-img{
+    width: 300px;
+    height: 120px;
+    background:url("../image/header/TB1adb0OFXXXXXzapXXXXXXXXXX-245-81.png") no-repeat;
+    background-size: 100%;
+    margin: 0 auto;
+}
+.standard-img h1{
+    text-align: center;
+    line-height: 100px;
+    font-size: 30px;
+    color:#ff4411;
+}
 .download{
     width: 320px;
     height: 110px;
@@ -91,6 +104,7 @@ nav{
     top: 110px;
     left: 154px;
     display: none;
+    z-index: 10;
 }
 .qr-dow img{
     width:100%;
@@ -101,31 +115,44 @@ nav{
 }
 section{
     width:100%;
+    position: relative;
 }
-#goods{
+#goodsList{
     width:100%;
     height: 50px;
     background:#fb3434;
 }
-#goods ul{
+#goodsList ul{
     width: 1200px;
     height: 50px;
     margin:0 auto;
 }
-.goods{
+.goodsList{
     position: fixed;
     top:0;
     left:0;
     transition: 1s;
+    z-index: 5;
 }
-#goods ul li{
+#goodsList ul li{
     float:left;
     width: 120px;
     line-height: 50px;
     text-align: center;
 }
-#goods ul li a{
+#goodsList ul li:hover{
+    background:orange;
+}
+#goodsList ul li a{
+    display: block;
+    width:100%;
+    height:100%;
     color:#ffffff;
+}
+.goods{
+    width: 1200px;
+    margin:0 auto;
+    overflow: hidden;
 }
 footer{
     width:100%;
@@ -187,4 +214,54 @@ footer ul li a{
     text-align: center;
     float: left;
     color: #999999;
+}
+.shade{
+    width:100%;
+    height:100%;
+    position: fixed;
+    z-index: 10;
+    top:0;
+    left:0;
+}
+.loginContainer{
+    width:450px;
+    height: 200px;
+    background: orangered;
+    position: fixed;
+    top:30%;
+    left: 36%;
+    border: 5px solid rgba(0,0,0,0.3);
+    z-index: 11;
+    padding:50px 0;
+}
+.loginContainer .login-off{
+    width: 50px;
+    height: 20px;
+    color: #ffffff;
+    position: absolute;
+    top: 10px;
+    background:none;
+    border:none;
+    right: 10px;
+}
+.loginContainer p{
+    text-align: center;
+    width:100%;
+    height: 30px;
+    color: #ffffff;
+    margin:30px 0;
+}
+.loginContainer input{
+    width: 200px;
+    height: 30px;
+    /*float:left;*/
+    /*margin: 25px 50px;*/
+}
+.loginContainer #enter{
+    width: 80px;
+    height: 30px;
+    margin-left: 85px;
+    background: #ffffff;
+    color:#fb3434;
+    border: none;
 }
