--- a/shop/css/indent.css
+++ b/shop/css/indent.css
@@ -1,6 +1,5 @@
 .goods{
     width: 1200px;
-    height: 600px;
     margin:0 auto;
 }
 .Receiving, .payment, .Inventory, .submit{
@@ -68,16 +67,123 @@
     float: right;
 }
 .Button{
-    border: none;
     text-align: center;
     background: #ff4411;
     color: #ffffff;
+    border:2px solid transparent;
+    cursor: pointer;
 }
 .address-item{
+     width:100%;
+     float:left;
+     margin: 10px auto;
+     padding:10px 10px;
+     box-sizing: border-box;
+     border:2px solid #ff4411;
+     line-height: 30px;
+ }
+.address-item-yes{
     width:100%;
     float:left;
-    margin: 10px 0;
+    margin: 10px auto;
+    padding:10px 10px;
+    box-sizing: border-box;
+    border:2px solid #81c140;
+    background:rgba(120,193,64,0.3);
+    line-height: 30px;
+}
+.address-item:hover{
+    background:#ebebeb;
 }
 .delress-item{
-   float:right;
+    float:right;
+    width: 30px;
+    height:30px;
+    border-radius: 50%;
+    border:none;
+    background:url("../image/header/del.png");
+    background-size: 100%;
+}
+.delress-item:hover{
+    background-image: url("../image/header/del.png");
+}
+.okress-item{
+    float:right;
+    width: 30px;
+    height:30px;
+    border-radius: 50%;
+    border:none;
+    background:url("../image/header/ok.png") center center;
+    background-size: 100%;
+}
+#COD{
+    margin: 0 10px;
+}
+.pay{
+    border:2px solid #81c140;
+    background:url("../image/header/ok.png") no-repeat  8% center ;
+    background-size: 20% 50%;
+    color: #fb3434;
+}
+#InvenTable{
+    width:100%;
+}
+.tr-first{
+    width:100%;
+    height: 100px;
+    text-align: center;
+    font-size: 20px;
+    border-top:2px solid #fb3434;
+    border-bottom:2px solid #fb3434;
+}
+.tr-goods:hover{
+    background: #f0f0f0;
+}
+.tr-goods{
+    width:100%;
+    height: 100px;
+    text-align: center;
+    font-size: 20px;
+    border-top:1px solid #ff4411;
+    border-bottom:1px solid #ff4411;
+    border-right:1px solid #ff4411;
+}
+.choice{
+    width: 100px;
+    height: 100px;
+}
+.commodity{
+    width: 300px;
+    height: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.commodity a{
+    display:inline-block;
+    width:300px;
+
+}
+.commodity-num{
+    width: 250px;
+    height: 100px;
+}
+.univalence{
+    width: 300px;
+    height: 100px;
+}
+.subtotal{
+    width: 300px;
+    height: 100px;
+}
+.commodity img{
+    width: 100px;
+    height: 100px;
+    float: left;
+    border-left:1px solid #fb3434;
+    border-right:1px solid #fb3434;
+}
+.commodity a{
+    line-height: 100px;
+    color: #ff4411;
 }
