--- a/shop/css/index.css
+++ b/shop/css/index.css
@@ -73,6 +73,7 @@
     text-indent: 2em;
     line-height: 30px;
 }
+
 .goods ul li a{
     position: absolute;
     top:0;
@@ -80,4 +81,25 @@
     width:100%;
     height:100%;
     z-index: 2;
+}
+.carouselContainer{
+    width:100%;
+    background-color:rgb(158, 211, 193);
+}
+.carousel{
+    width: 750px;
+    height: 340px;
+    margin:0 auto;
+    overflow: hidden;
+    position: relative;
+}
+.carousel ul {
+    width: 5000px;
+    height: 340px;
+    position: absolute;
+    top:0;
+    left:0;
+}
+.carousel ul li {
+    float:left;
 }
