--- a/shop/css/List.css
+++ b/shop/css/List.css
@@ -1,6 +1,8 @@
 
 .goods ul{
-    height: 860px;
+    /*height: 860px;*/
+    padding-bottom:50px;
+    overflow: hidden;
 }
 .goods ul li {
     width: 200px;
@@ -57,14 +59,4 @@
     width:100%;
     height:100%;
     z-index: 2;
-}
-.But{
-    width: 1200px;
-    height: 30px;
-    position: absolute;
-    bottom: 0;
-    z-index: 2;
-}
-.But button{
-    float:left;
 }
