--- a/shop/css/index.css
+++ b/shop/css/index.css
@@ -85,21 +85,139 @@
 .carouselContainer{
     width:100%;
     background-color:rgb(158, 211, 193);
+    height: 340px;
+}
+.sans{
+    width: 1150px;
+    margin:0 auto;
 }
 .carousel{
     width: 750px;
     height: 340px;
-    margin:0 auto;
+    float: left;
     overflow: hidden;
     position: relative;
 }
-.carousel ul {
+#carouselUl {
     width: 5000px;
     height: 340px;
     position: absolute;
     top:0;
     left:0;
+    z-index: 1;
 }
-.carousel ul li {
+#carouselUl>li {
     float:left;
+}
+#circle{
+    width:60px;
+    height: 20px;
+    position: absolute;
+    left: 0;
+    right:0;
+    margin: 0 auto;
+    bottom: 10px;
+    z-index: 3;
+}
+
+#circle>li{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: rgba(255,50,0,0.3);
+    float: left;
+    margin: 0 5px;
+}
+#circle>li.circleLi{
+      background: rgba(255,50,0,1);
+}
+#goodsHot{
+    width:200px;
+    height: 340px;
+    /*border:1px solid #757373;*/
+    float:left;
+    position: relative;
+    overflow: hidden;
+}
+#goodsHot>span{
+    width: 30px;
+    height: 20px;
+    position: absolute;
+    top:0;
+    bottom:0;
+    margin:auto 0;
+    z-index: 3;
+    background:rgba(0,0,0,0.1);
+    padding: 5px;
+    cursor: pointer;
+    display: none;
+}
+#goodsHot:hover span{
+    display: block;
+}
+.leftSpan{
+    left:0;
+}
+.rightSpan{
+    right:0;
+}
+#goodsHot>span>img{
+    width: 30px;
+    height:20px;
+}
+#goodsHotUl{
+    position: absolute;
+    width: 1000px;
+
+    top:0;
+    left:0;
+}
+#goodsHotUl>li{
+    float:left;
+    width: 200px;
+    height: 340px;
+}
+#goodsHotUl>li>a>img{
+    width: 200px;
+    height: 340px;
+}
+#userLog{
+    width:200px;
+    height: 340px;
+    float:left;
+    background: #ffffff;
+}
+.headerPortrait{
+    margin: 10px 0;
+}
+#userLog{
+    text-align: center;
+}
+#userLog a{
+    display: inline-block;
+    width: 80px;
+    height: 30px;
+    color:black;
+    border:1px solid #fb3434;
+    border-radius: 5px;
+    line-height: 30px;
+    text-align: center;
+    background:#ffffff;
+    margin:10px 5px;
+}
+#userLog a:hover{
+    background:#fb3434;
+    color: #ffffff;
+}
+.sign-in{
+    width: 200px;
+    text-align: center;
+    margin-top: 20px;
+}
+.sign-in img{
+    width: 150px;
+}
+.sign-in img+img{
+    width: 120px;
+    margin-top: 10px;
 }
