--- a/yitao-m/css/details.styl
+++ b/yitao-m/css/details.styl
@@ -45,7 +45,9 @@ header
         color #3c3c3c
 .goodsDetails
   width 100%
+  overflow hidden
   font-size rem(16)
+  padding-bottom rem(50)
   div
     img
       width 100%
